add data directory index table show

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -56,7 +57,7 @@ QT5_WRAP_CPP(PROJ_HEADERS_MOC ${PROJ_HEADERS})
 QT5_WRAP_UI(PROJ_FORMS_HEADERS ${PROJ_FORMS})
 
 #use rcc to process .qrc files
-#QT5_ADD_RESOURCES(PROJ_RESOURCES_RCC ${PROJ_RESOURCES})
+QT5_ADD_RESOURCES(PROJ_RESOURCES_RCC ${PROJ_RESOURCES})
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
