add zh translation file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,25 +99,31 @@ QT5_WRAP_UI(PROJ_FORMS_HEADERS ${PROJ_FORMS})
 QT5_ADD_RESOURCES(PROJ_RESOURCES_RCC ${PROJ_RESOURCES})
 
 # Qt5LinguistTools
-find_package(Qt5 COMPONENTS LinguistTools)
-FILE(GLOB TS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/langs/*.ts")
+find_package(Qt5 COMPONENTS LinguistTools REQUIRED)
 
-IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-file(WRITE  ${CMAKE_CURRENT_BINARY_DIR}/zh.qm CONTENT "")
+
+set(LANG_PATH ${CMAKE_CURRENT_BINARY_DIR}/langs)
+MESSAGE(STATUS "LANG_PATH: ${LANG_PATH}")
+
+IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    execute_process(COMMAND mkdir -p ${LANG_PATH})
+ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    MESSAGE(STATUS "LANG_PATH: ${LANG_PATH} on windows")
+    execute_process(COMMAND if not exist ${LANG_PATH} (mkdir ${LANG_PATH}))
 ENDIF()
+  
+FILE(GLOB QM_FILES "${CMAKE_CURRENT_SOURCE_DIR}/langs/*.qm")
+MESSAGE(STATUS "QM_FILES: ${QM_FILES}")
+MESSAGE(STATUS "CMAKE_PROJECT_NAME: ${CMAKE_PROJECT_NAME}")
 
-qt5_create_translation(QM_FILES ${PE_LIB_SRC_FILES} ${TS_FILES})
-
+#Copy Qm files to langs folder
+foreach(QM_FILE ${QM_FILES})
+    get_filename_component(QM_FILENAME "${QM_FILE}" NAME)
+    set(TARGET_QM_FILE_PATH "${CMAKE_CURRENT_BINARY_DIR}/langs/${QM_FILENAME}")
+    MESSAGE(STATUS "TARGET_QM_FILE_PATH:  ${TARGET_QM_FILE_PATH}")
+    configure_file(${QM_FILE} ${TARGET_QM_FILE_PATH} COPYONLY)
+endforeach()
  
- MESSAGE(STATUS "TS_FILES: ${TS_FILES}")
- MESSAGE(STATUS "QM_FILES: ${QM_FILES}")
- MESSAGE(STATUS "CMAKE_PROJECT_NAME: ${CMAKE_PROJECT_NAME}")
- MESSAGE(STATUS "Qt5Widgets_LIBRARIES: ${Qt5Widgets_LIBRARIES}")
- MESSAGE(STATUS "Qt5Core_LIBRARIES: ${Qt5Core_LIBRARIES}")
-
- #Copy Qm files to resources langs folder
-#file(COPY ${QM_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/langs)
-configure_file(${QM_FILES} ${CMAKE_CURRENT_BINARY_DIR}/langs COPYONLY)
 
 
 ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME} 
